--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,36 +1,56 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="HealthCare.MainPage">
+             x:Class="HealthCare.MainPage"
+             Shell.NavBarIsVisible="False"
+             Shell.TabBarIsVisible="False">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+    <Grid RowDefinitions="*, Auto"
+      Padding="0,0,0,40">
+        <VerticalStackLayout Grid.Row="0"
+                         Spacing="20"
+                         HorizontalOptions="Center"
+                         VerticalOptions="Center">
+            <Image Source="loading_image_1"
+               HeightRequest="250"
+               WidthRequest="250"
+               Aspect="AspectFit"/>
+            <Label Text="Welcome"
+               FontSize="20"
+               HorizontalOptions="Center"
+               FontAttributes="Bold"/>
+            <Label Text="App for tracking your health"
+               FontAttributes="Bold"
+               FontSize="25"
+               HorizontalOptions="Center"/>
         </VerticalStackLayout>
-    </ScrollView>
+        <VerticalStackLayout Grid.Row="1"
+                         Spacing="20"
+                         HorizontalOptions="Center">
+            <Button Text="SignUp" Clicked="SignUp_Clicked"
+                BackgroundColor="{StaticResource Primary}"
+                TextColor="White"
+                FontSize="18"
+                CornerRadius="25"
+                HeightRequest="50"
+                WidthRequest="250"/>
+            <Button Text="SignIn" Clicked="SignIn_Clicked"
+                BackgroundColor="{StaticResource Primary}"
+                TextColor="White"
+                FontSize="18"
+                CornerRadius="25"
+                HeightRequest="50"
+                WidthRequest="250"/>
+            <Button Text="Continue without logging" 
+                BackgroundColor="Black"
+                TextColor="White"
+                FontAttributes="Bold"
+                FontSize="15"
+                CornerRadius="25"
+                HeightRequest="45"
+                WidthRequest="200"
+                Clicked="Without_log_Clicked" />
+        </VerticalStackLayout>
+    </Grid>
 
 </ContentPage>
